--- a/src/components/App.css
+++ b/src/components/App.css
@@ -54,6 +54,7 @@
 
 h1 {
   text-align: center;
+}
 
 /* .sidenav {
   width: 130px;
@@ -64,7 +65,7 @@ h1 {
   overflow-x: hidden;
   padding: 8px 0;
 } */
-  
+
 .sidenav {
   height: 100%;
   width: 200px;
