--- a/src/components/App.css
+++ b/src/components/App.css
@@ -36,8 +36,13 @@
 
 .logo {
   height: 3rem;
-  width: 3rem;
+  width: 8rem;
   margin-left: 0.5em;
+}
+
+.loginlogo {
+  height: 3rem;
+  width: 3rem;
 }
 
 .student-select {
